# birdnet-go-birdcall

./: docker-compose.yml
app/: Dockerfile  app.py  requirements.txt
app/static/: main.js  manifest.webmanifest  service-worker.js
app/templates/: index.html
birdcall/: Cargo.toml  Dockerfile  ffmpeg_sender.py  personality.py  requirements.txt  watchdog.py
birdcall/src/: pipeline.rs  rtmp.rs
birdcall/src/commands/: join.rs  reconnect.rs  status.rs  stop.rs
