[package]
name = "birdcall"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "birdcall"
path = "src/main.rs"

[dependencies]
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
songbird = "0.4"
tokio = { version = "1", features = ["full"] }
